homepagnewsletter, social icons

--- a/hronologija.html
+++ b/hronologija.html
@@ -55,7 +55,7 @@
 				</div>
 				<div class="source-details w-100 w-75-ns pv3-l">
 					<h3 class="source-title lh-title f4 fw6"></h3>
-					<div class="source-excerpt mv3"></div>
+					<div class="source-excerpt section-desc mv3"></div>
 				</div>
 			</div>
 		</div>
