--- a/svet.html
+++ b/svet.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="country-details w-100 w-75-ns pv3-l">
 					<h3 class="country-title lh-title f4 fw6"></h3>
-					<div class="country-excerpt mv3"></div>
+					<div class="country-excerpt section-desc mv3"></div>
 				</div>
 			</div>
 		</div>
@@ -85,7 +85,7 @@
 				title: "Ujedinjeno Kraljevstvo",
 				excerpt: "<p>U Britaniji je za manje od dve decenije drastično povećan broj kamera na nadzor: od 100 instaliranih kamera 1990. godine do preko četiri miliona u prvoj deceniji 20. veka. Kako se navodi u izveštaju organizacije “Big Brother Watch” <a href='https://bigbrotherwatch.org.uk/campaigns/stop-facial-recognition/report/'>objavljenom 2018</a>, savremena tehnologija pametnog nadzora je ipak neuspešna: 98% identifikacija u Londonu su bile pogrešne. U Velsu je tačnost rezultata iznosila svega 9% dok su slike 2.451 neosnovano osumnjičenih osoba ostale u sistemu policije godinu dana.</p><br><p>S druge strane, zasad najveća pravna pobeda britanskih građana proglašena je u oktobru 2019. godine, kada je parlament podneo predlog zakona kojim bi se uspostavio <a href='https://publications.parliament.uk/pa/bills/lbill/2019-2019/0047/20047.pdf'>moratorijum na tehnologiju prepoznavanja lica</a>, dok bi se svako upravljanje, instaliranje i kupovina opreme za analiziranje biometrijskih podataka građana u javnom prostoru smatralo krivičnim delom.</p>"
 			}, {
-				image: "./assets/@2x.svg",
+				image: "./assets/Flag4@3x.svg",
 				title: "Argentina",
 				excerpt: "<p>Slučaj jednog stanovnika Buenos Ajresa pokazao je široj javnosti u Argentini kako tehnologija za prepoznavanje lica može nevinim ljudima da sruči nevolju za vrat. Naime, čoveka je po ulasku u metro zaustavila policija jer su ga <a href='https://edri.org/dangerous-by-design-a-cautionary-tale-about-facial-recognition/'>pametne kamere identifikovale</a> kao navodnog pljačkaša za kojim se traga već 17 godina. Lažno osumnjičeni je satima ubeđivao policiju da je nevin, a onda su policajci pokušavali da “ubede” kompjuterski program. Na kraju je čovek oslobođen, a po sopstvenim rečima imao je sreće – jer je belac. U jednom <a href='https://www.clarin.com/policiales/paso-semana-preso-error-policial-sistema-reconocimiento-facial_0_6KiuCu0fy.html'>sličnom incidentu</a>, pogrešno osumnjičeni muškarac tamnije kože proveo je čitavih šest dana u pritvoru zbog pogrešne identifikacije u sistemu “pametnog” nadzora.</p>"
 			}, {
