--- a/index.html
+++ b/index.html
@@ -50,119 +50,175 @@
 			</div>
 		</div>
 	</header>
-	<section class="pa3 ph5-ns">
-		<div class="w-main">
-			<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Problem</h1>
-			<p class="lh-copy fw3">
-	Tehnologije za prepoznavanje lica i predmeta u javnom prostoru počivaju na pretpostavci da smo svi mogući kriminalci – snimaju naše kretanje i susrete, analiziraju naše ponašanje, predviđaju naše postupke. Potpuni gubitak anonimnosti jeste lišavanje slobode: svest da smo pod nadzorom drastično menja naše odluke. Sistem pametnog nadzora uvodi se u Beograd bez učešća javnosti, bez razgovora o mogućim posledicama, mimo načela propisanih zakonima i Ustavom.
-			</p>
-		</div>
-	</section>
-	<section class="pa3 ph5-ns">
-		<div class="w-main flex flex-column flex-row-ns justify-center-ns bt b--yellow pa3 pt5-ns">
-			<div class="w-100 w-40-ns pl5-l">
-				<h2 class="pv2 pb4-l normal section-title-small checkmark">Šta znamo?</h2>
-				<ul class="ml3 yellow-bull-list fw3">
-					<li class="pb3-ns">Biće ih hiljade</li>
-					<li class="pb3-ns">Prepoznaju lica i stvari</li>
-					<li class="pb3-ns">Već se uveliko postavljaju</li>
-					<li class="pb3-ns">Nije bilo javne rasprave</li>
-				</ul>
-			</div>
+	<main class="">
+		<section class="pa3 pa5-ns bg-white">
+			<section class="pa3 ph5-ns">
+				<div class="w-main">
+					<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Problem</h1>
+					<p class="lh-copy fw3 section-desc">
+						Tehnologije za prepoznavanje lica i predmeta u javnom prostoru počivaju na pretpostavci da smo svi mogući kriminalci – snimaju naše kretanje i susrete, analiziraju naše ponašanje, predviđaju naše postupke. Potpuni gubitak anonimnosti jeste lišavanje slobode: svest da smo pod nadzorom drastično menja naše odluke. Sistem pametnog nadzora uvodi se u Beograd bez učešća javnosti, bez razgovora o mogućim posledicama, mimo načela propisanih zakonima i Ustavom.
+					</p>
+				</div>
+			</section>
+			<section class="pa3 ph5-ns">
+				<div class="w-main flex flex-column flex-row-ns justify-center-ns bt b--yellow pa3 pt5-ns">
+					<div class="w-100 w-40-ns pl5-l">
+						<h2 class="pv2 pb4-l normal section-title-small checkmark">Šta znamo?</h2>
+						<ul class="ml3 yellow-bull-list fw3">
+							<li class="pb3-ns">Biće ih hiljade</li>
+							<li class="pb3-ns">Prepoznaju lica i stvari</li>
+							<li class="pb3-ns">Već se uveliko postavljaju</li>
+							<li class="pb3-ns">Nije bilo javne rasprave</li>
+						</ul>
+					</div>
 
-			<div class="w-100 w-40-ns pl5-l">
-				<h2 class="pv2 pb4-l normal section-title-small xmark">Šta ne znamo?</h2>
-				<ul class="ml3 yellow-bull-list fw3">
-					<li class="pb3-ns">Pravi razlog za masovni nadzor</li>
-					<li class="pb3-ns">Sigurnost sistema</li>
-					<li class="pb3-ns">Koliko nas koštaju</li>
-					<li class="pb3-ns">Tačan broj i lokacije</li>
-				</ul>
-			</div>
-		</div>
-	</section>
-
-	<main class="pa3 pa5-ns">
-		<section class="pa3 ph5-ns">
-			<div class="w-main bt b--yellow pt5-ns">
-				<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Tehnologija</h1>
-				<div class="flex flex-column flex-row-ns justify-between-ns pt4-ns">
-					<div class="w-100 w-20-l flex flex-column">
-						<div class="flex flex-column flex-auto ph3-ns">
-							<h4 class="card-title normal mb2 mb3-ns">Kamere</h4>
-							<div class="card-image">
-								<img src="./assets/1_Kamere@2x.svg" />
-								<div class="card-img-arrow flex justify-around">
-									<img src="./assets/Arrow@2x.svg"/>
-								</div>
-							</div>
-							<p class="card-desc ph4 pv3-ns fw3">Kamere na ulicama snimaju 24/7, detektuju lica i objekte i poseduju naprednu optiku koja može da zumira i snima noću</p>
-						</div>
-						<div class="card-pill-holder">
-							<span class="card-pill br3 pa1">NIVO: Kamera</span>
-							<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Modeli pametnih kamera: IPC6625-Z30 IPC6225-VRZ-ES</span>
-						</div>
+					<div class="w-100 w-40-ns pl5-l">
+						<h2 class="pv2 pb4-l normal section-title-small xmark">Šta ne znamo?</h2>
+						<ul class="ml3 yellow-bull-list fw3">
+							<li class="pb3-ns">Pravi razlog za masovni nadzor</li>
+							<li class="pb3-ns">Sigurnost sistema</li>
+							<li class="pb3-ns">Koliko nas koštaju</li>
+							<li class="pb3-ns">Tačan broj i lokacije</li>
+						</ul>
 					</div>
-					<div class="w-100 w-20-l flex flex-column">
-						<div class="flex flex-column flex-auto ph3-ns">
-							<h4 class="card-title normal mb2 mb3-ns">Monitoring</h4>
-							<div class="card-image">
-								<img src="./assets/2_Monitoring@2x.svg" />
-								<div class="card-img-arrow flex justify-around">
-									<img src="./assets/Arrow@2x.svg"/>
+				</div>
+			</section>
+			<section class="pa3 ph5-ns">
+				<div class="w-main bt b--yellow pt5-ns">
+					<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Tehnologija</h1>
+					<div class="flex flex-column flex-row-ns justify-between-ns pt4-ns">
+						<div class="w-100 w-20-l flex flex-column">
+							<div class="flex flex-column flex-auto ph3-ns">
+								<h4 class="card-title normal mb2 mb3-ns tc">Kamere</h4>
+								<div class="card-image">
+									<img src="./assets/1_Kamere@2x.svg" />
+									<div class="card-img-arrow flex justify-around">
+										<img src="./assets/Arrow@2x.svg"/>
+									</div>
 								</div>
+								<p class="card-desc ph4 pv3-ns fw3">Kamere na ulicama snimaju 24/7, detektuju lica i objekte i poseduju naprednu optiku koja može da zumira i snima noću</p>
 							</div>
-							<p class="card-desc ph4 pv3-ns fw3">Feed i informacije iz kamera se prate u realnom vremenu od strane MUP</p>
+							<div class="card-pill-holder">
+								<span class="card-pill br3 pa1">NIVO: Kamera</span>
+								<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Modeli pametnih kamera: IPC6625-Z30 IPC6225-VRZ-ES</span>
+							</div>
 						</div>
-						<div class="card-pill-holder">
-							<span class="card-pill br3 pa1">NIVO: Komandno-operativni centar</span>
-							<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za upravljanje: VCN3020</span>
-						</div>
-					</div>
-					<div class="w-100 w-20-l flex flex-column">
-						<div class="flex flex-column flex-auto ph3-ns">
-							<h4 class="card-title normal mb2 mb3-ns">Skladištenje</h4>
-							<div class="card-image">
-								<img src="./assets/3_sklasistenje@2x.svg" />
-								<div class="card-img-arrow flex justify-around">
-									<img src="./assets/Double arrow @2x.svg"/>
+						<div class="w-100 w-20-l flex flex-column">
+							<div class="flex flex-column flex-auto ph3-ns">
+								<h4 class="card-title normal mb2 mb3-ns tc">Monitoring</h4>
+								<div class="card-image">
+									<img src="./assets/2_Monitoring@2x.svg" />
+									<div class="card-img-arrow flex justify-around">
+										<img src="./assets/Arrow@2x.svg"/>
+									</div>
 								</div>
+								<p class="card-desc ph4 pv3-ns fw3">Feed i informacije iz kamera se prate u realnom vremenu od strane MUP</p>
 							</div>
-							<p class="card-desc ph4 pv3-ns fw3">Podaci i rezultati analiza se čuvaju za dalje potrebe</p>
-						</div>
-						<div class="card-pill-holder">
-							<span class="card-pill br3 pa1">NIVO: Server sala</span>
-							<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za skladištenje OceanStor</span>
-						</div>
-					</div>
-					<div class="w-100 w-20-l flex flex-column">
-						<div class="flex flex-column flex-auto ph3-ns">
-							<h4 class="card-title normal mb2 mb3-ns">Analiza</h4>
-							<div class="card-image">
-								<img src="./assets/4_analiza@2x.svg" />
+							<div class="card-pill-holder">
+								<span class="card-pill br3 pa1">NIVO: Komandno-operativni centar</span>
+								<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za upravljanje: VCN3020</span>
 							</div>
-							<p class="card-desc ph4 pv3-ns fw3">Napredna analiza i pretraga lica i objekata po zadatim parametrima</p>
 						</div>
-						<div class="card-pill-holder">
-							<span class="card-pill br3 pa1">NIVO: Komandno-operativni centar</span>
-							<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za analitiku VCM5020</span>
+						<div class="w-100 w-20-l flex flex-column">
+							<div class="flex flex-column flex-auto ph3-ns">
+								<h4 class="card-title normal mb2 mb3-ns tc">Skladištenje</h4>
+								<div class="card-image">
+									<img src="./assets/3_sklasistenje@2x.svg" />
+									<div class="card-img-arrow flex justify-around">
+										<img src="./assets/Double arrow @2x.svg"/>
+									</div>
+								</div>
+								<p class="card-desc ph4 pv3-ns fw3">Podaci i rezultati analiza se čuvaju za dalje potrebe</p>
+							</div>
+							<div class="card-pill-holder">
+								<span class="card-pill br3 pa1">NIVO: Server sala</span>
+								<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za skladištenje OceanStor</span>
+							</div>
+						</div>
+						<div class="w-100 w-20-l flex flex-column">
+							<div class="flex flex-column flex-auto ph3-ns">
+								<h4 class="card-title normal mb2 mb3-ns tc">Analiza</h4>
+								<div class="card-image">
+									<img src="./assets/4_analiza@2x.svg" />
+								</div>
+								<p class="card-desc ph4 pv3-ns fw3">Napredna analiza i pretraga lica i objekata po zadatim parametrima</p>
+							</div>
+							<div class="card-pill-holder">
+								<span class="card-pill br3 pa1">NIVO: Komandno-operativni centar</span>
+								<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za analitiku VCM5020</span>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
+			<section class="pa3 ph5-ns pb5-l">
+				<div class="w-main bt b--yellow pt5-ns">
+					<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Akcija</h1>
+					<p class="lh-copy section-desc">
+						Postoji više načina na koje odmah možeš da se uključiš u borbu protiv masovnog video nadzora.
+					</p>
+					<h3 class="pv2 pv4-l sub-title-pf">Mapiraj kamere</h3>
+					<p class="lh-copy pv3-l section-desc">Fotografiši kamere u svom kraju i postavi ih na tviter sa lokacijom i hashtagom #hiljadekamera, ili nam ih pošalji na <a href="#">hiljadekamera [at] protonmail [dot] com</a>. Trenutno uspostavljamo aplikaciju za mapiranje, a do tada ih u bazu unosimo ručno.
+					</p>
+					<h3 class="pv2 pv4-l sub-title-pf">Prijavi se ili nam piši</h3>
+					<p class="lh-copy pv3-l section-desc">Ako želiš da se uključiš u buduće akcije ili samo povremeno dobijaš informacije piši nam ili se prijavi putem forme i na Telegram kanal:</p>
+					<div class="w-100 w-50-l">
+						<div class="w-100 pv3 pv4l flex items-center">
+							<a class="flex icon-link" href="#">
+								<i class="fa fa-envelope-o bg-yellow br-100 flex justify-center items-center bg-animate"></i>
+								<span class="bb bw1 b--yellow fw6 ml4">hiljadekamera [at] protonmail [dot] com</span>
+							</a>
+						</div>
+						<div class="w-100 pv3 pv4l flex items-center">
+							<a class="flex icon-link" href="#">
+								<i class="fa fa-paper-plane-o bg-yellow br-100 flex justify-center items-center bg-animate"></i>
+								<span class="bb bw1 b--yellow fw6 ml4">https://t.me/hiljadekamera</span>
+							</a>
+						</div>
+						<div class="w-100 pv4-l">
+							<form class="">
+							  	<div class="flex flex-column flex-row-ns justify-between-ns">
+							    	<label class="clip" for="email-address"></label>
+							    	<input class="ns-input input-reset pa2 db w-100 w-70-m w-75-l br2" placeholder="Unesite mail adresu" type="text" name="email-address" value="" id="email-address">
+							    	<input class="send-btn f4 f3-l b button-reset tc bn bg-animate br2 pointer w-100 w-25-m w-20-l" type="submit" value="Pošalji">
+							  	</div>
+						  	</form>
+						</div>
+					</div>
+					<h3 class="pv2 pv4-l sub-title-pf">Podeli</h3>
+					<div class="w-100 pv3 pv4l">
+						<div class="flex items-center pb3">
+							<a class="icon-link mr3" href="#">
+								<i class="fa fa-share bg-yellow br-100 flex justify-center items-center bg-animate"></i>
+							</a>
+							<a class="icon-link mr3 " href="#">
+								<i class="fa fa-facebook bg-yellow br-100 flex justify-center items-center bg-animate"></i>
+							</a>
+							<a class="icon-link" href="#">
+								<i class="fa fa-twitter bg-yellow br-100 flex justify-center items-center bg-animate"></i>
+							</a>
+						</div>
+						<p class="lh-copy pv3-l section-desc"><a href="#">Odštampaj i zalepi poster</a> u svojoj zgradi ili kraju.:</p>
+					</div>
+				</div>
+			</section>
 		</section>
-		<section class="pa3 ph5-ns">
-			<div class="w-main bt b--yellow pt5-ns">
-				<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Akcija</h1>
-				<p class="lh-copy fw3">
-					Postoji više načina na koje odmah možeš da se uključiš u borbu protiv masovnog video nadzora.
-				</p>
-			</div>
+		<section class="bg-near-white pa3 pa5-ns">
+			<section class="pa3 ph5-ns">
+				<div class="w-main">
+					<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Znate više</h1>
+					<div class="w-main bt b--yellow pt5-ns">
+						<div class="pv2 pb4-l flex justify-between items-center">
+							<h2 class="normal section-title-small">Hronologija</h2>
+							<a class="no-underline bg-yellow tc ph3" href="#">Pročitajte vise</a>
+						</div>
+						<h4 class="card-title normal mb2 mb3-ns ttu">Postavljanje kamera je u toku</h4>
+						<p class="lh-copy fw3 section-desc">Svakodnevno, građani putem društvenih mreža prijavljuju kako se u njihovim ulicama i krajevima vrše radovi na infrastrukturi i postavljaju kamere koje deluju invazivno u odnosu na prostor i gustinu naseljenosti.
+						</p>
+					</div>
+				</div>
+			</section>
 		</section>
-		<section class="w-main bg-washed-green mt5">
-			<h2>What's the problem?</h2>
-		</section>
-
 		<section class="w-main bg-washed-blue mt5">
 			<h2>Why is it a problem?</h2>
 		</section>
